--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-yfinance>=0.2.0
+# Core dependencies
+kiteconnect>=5.0.0
+openai>=1.0.0
+python-dotenv>=1.0.0
+flask>=3.0.0
+
+# Data processing
 pandas>=2.0.0
 numpy>=1.24.0
-matplotlib>=3.7.0
-scipy>=1.10.0
