feat: SQLite persistence + AWS deploy + CI/CD pipeline
SQLite Migration:
- state_db.py: WAL-mode SQLite replacing 9 JSON state files
- ON CONFLICT DO UPDATE for order records
- health_history restore in data_health_gate

Performance:
- exit_manager: single-symbol upsert (_persist_single)
- autonomous_trader: EOD DB maintenance (WAL checkpoint + purge >30d)
- Analysis scripts rewritten for SQLite

Infrastructure:
- AWS EC2 deployment stack (systemd + Docker + Nginx)
- GitHub Actions CI/CD: lint -> deploy -> healthcheck
- Auto-backup with 5-version retention + rollback script
- quick-deploy.ps1 for urgent local deploys
- .gitignore: exclude ML models, large data, secrets

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,33 @@ __pycache__/
 zerodha_token.json
 *.env
 .env
+agentic_trader/.env
+
+# SQLite database (state is per-machine)
+*.db
+*.db-wal
+*.db-shm
+
+# Migrated JSON backups
+*.json.migrated
 
 # Logs and temporary data
 *.log
+logs/
 trade_log.json
 active_trades.json
 trade_history.json
+
+# ML models & large data (deploy separately)
+agentic_trader/ml_models/saved_models/
+agentic_trader/ml_models/data/
+*.parquet
+*.pkl
+*.joblib
+*.jsonl
+
+# Docker volumes
+grafana-data/
 
 # IDE
 .vscode/
@@ -22,3 +43,8 @@ trade_history.json
 # OS
 .DS_Store
 Thumbs.db
+
+# Deploy temp files
+deploy/_ec2_details.json
+deploy/_launch_ec2.py
+deploy/_deploy_to_ec2.py
