fix: headless-safe input() guards + unbuffered service output
- zerodha_tools.py: isatty() guard on _load_token() and authenticate() to prevent EOFError in systemd/Docker
- autonomous_trader.py: auto-confirm LIVE mode when headless (mode set by .env TRADING_MODE)
- titan-bot.service: add PYTHONUNBUFFERED=1 for real-time log output

--- a/deploy/titan-bot.service
+++ b/deploy/titan-bot.service
@@ -13,6 +13,7 @@ User=titan
 Group=titan
 WorkingDirectory=/home/titan/app/agentic_trader
 Environment=PATH=/home/titan/app/.venv/bin:/usr/bin:/bin
+Environment=PYTHONUNBUFFERED=1
 EnvironmentFile=/home/titan/app/agentic_trader/.env
 
 # Main command
