feat: comprehensive monitoring dashboard + CI/CD dashboard restart
- dashboard.py: Full rewrite with SSE live log streams, P&L charts,
  trade history, positions, scan decisions, exit states
- titan_dashboard.html: Dark-themed SPA with 5 tabs (Overview, Live Logs,
  Positions, Trade History, Scan Log), auto-refreshing KPIs
- titan-dashboard.service: gunicorn gthread workers for SSE support,
  bound to 0.0.0.0:5000, EC2 paths
- deploy.yml: restart titan-dashboard on deploy alongside titan-bot
- requirements.txt: add flask-cors, gunicorn

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,10 +144,17 @@ jobs:
           # 6) Restart bot service
           RESTART="${{ github.event.inputs.restart_bot || 'true' }}"
           if [ "$RESTART" = "true" ]; then
-            echo "[6/6] Restarting titan-bot service..."
+            echo "[6/6] Restarting services..."
             sudo systemctl restart titan-bot
-            sleep 3
+            sleep 2
+            # Restart dashboard if installed
+            if systemctl list-unit-files | grep -q titan-dashboard; then
+              sudo systemctl restart titan-dashboard
+            fi
+            sleep 2
             sudo systemctl status titan-bot --no-pager | head -10
+            systemctl is-active titan-dashboard 2>/dev/null && \
+              echo "  Dashboard: $(sudo systemctl is-active titan-dashboard)" || true
           else
             echo "[6/6] Skipping restart (manual trigger with restart=false)"
           fi
