--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ kiteconnect>=5.0.0
 openai>=1.0.0
 python-dotenv>=1.0.0
 flask>=3.0.0
+flask-cors>=4.0.0
+gunicorn>=21.2.0
 
 # Data processing
 pandas>=2.0.0
